# swarm

./: .claude.md  .coverage  .gitignore  README.md  agent_cli.py  agent_comm.py  auth.py  config.py  eslint.config.js  jsconfig.json  package-lock.json  package.json  pyproject.toml
.claude/: attn_state.json
.hooks/: Makefile  commit-msg  config.sh  install.sh  pre-commit
.hooks/pre-commit.d/: check-docs.sh  check-jsts.sh.disabled  check-line-count.sh  check-nodejs.sh  check-python.sh.disabled  utils.sh
.state/: README.md  final_state.json
.state/plans/: README.md
agent_system/: README.md
ci/: README.md  __init__.py  events.py  interface.py  local.py
cli/: README.md  __init__.py  main.py
communication/: README.md  __init__.py  core.py
docs/: README.md  architecture.md
examples/: README.md  __init__.py  blocking-demo.js  duo-demo.js  hello-world.js  performance-monitor.js
examples/demos/: README.md  __init__.py  blocking_demo.py
examples/poc/: README.md  __init__.py  duo_demo.py
lifecycle/: README.md  __init__.py  loop.py
orchestration/: claude_duo_poc.py
orchestrator/: README.md  __init__.py  main.py
personas/: README.md  __init__.py  generator.py  matcher.py  models.py
plan/: README.md  __init__.py  models.py  parser.py  validator.py
ralph/: __init__.py  context.py  loop.py
running/plans/: project.md
runtime/: README.md  __init__.py  branches.py  process.py  workspace.py
sandbox/: blocking_demo.py
spawner/: __init__.py  branch_manager.py  sandbox.py  terminal.py
src/: README.md  index.js
src/ci/: README.md  events.js  index.js  interface.js  local.js
src/cli/: README.md  commands.js  index.js
src/communication/: README.md  agent-status.js  agent.js  communications-file.js  coordinator.js  file-watcher.js  index.js
src/config/: README.md  index.js
src/lifecycle/: README.md  context.js  (+2 more)
tests/: README.md  conftest.py
todo/: swarm-experiment-example.ts  swarm-framework-spec.md  swarm-framework-types.ts
(+127 files in other folders)
